<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3sp"
    android:background="#575757">

    <TextView
        android:id="@+id/cityName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3sp"
        android:layout_marginEnd="5sp"
        android:text="@string/title_city_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:ellipsize="end"
        app:layout_constraintEnd_toStartOf="@id/temperature"
        app:drawableTint="@color/white"
        app:drawableStartCompat="@drawable/storage_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10sp"
        android:text="@string/loading_data"
        android:textColor="@color/white"
        app:drawableEndCompat="@drawable/temp_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/latitude"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableTint="@color/white" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10sp"
        android:text="@string/title_latitude"
        android:textColor="#787878"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/longitude"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:text="@string/title_longitude"
        android:textColor="#787878"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>